# OpenGLGame

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Camera.cpp  Face.cpp  Face.h  Face.tpp  Matrix.h  Matrix.tpp  Mesh.h  Mesh.tpp  Player.h  README.md  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Utility.cpp  Utility.h  Vertex.h  Vertex.tpp  VertexArray.cpp  VertexArray.h  VertexArray.tpp  main.cpp
.github/workflows/: c-cpp.yml
Callback/: Debug.cpp  Debug.h  Keyboard.cpp  Keyboard.h  Window.cpp  Window.h
HID/: Keyboard.cpp  Keyboard.h  Window.cpp  Window.h
Object/: Camera.h  Face.cpp  Face.h  Player.cpp  Player.h
OpenGL/: Shader.cpp  Shader.h  VertexArray.cpp
World/: Renderer.cpp  Renderer.h  Scene.cpp  Scene.h
World/Scene/: FileScene.cpp  FileScene.h  LicenseScene.cpp  LicenseScene.h  MenuScene.cpp  MenuScene.h  Scene.cpp  Scene.h  SceneDeleteOnExit.h  StartScene.cpp  StartScene.h
resources/: Credits.txt  Simple.frag  Simple.vert  cube.stl
